components/uue8liicb-nodejs/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: uue8liicb-nodejs
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: uue8liicb-nodejs 
  name: uue8liicb-nodejs
spec:
  ports:
  - port: 3001 
    targetPort: 3001 
  selector:
    app.kubernetes.io/instance: uue8liicb-nodejs
