components/uue8liicb-nodejs/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: uue8liicb-nodejs
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: uue8liicb-nodejs 
  name: uue8liicb-nodejs
spec:
  port:
    targetPort: 3001 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: uue8liicb-nodejs
    weight: 100
